# chroma-core

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
data/ecommerce-seasonal-brain/: events.json
docs/: 00-intro.md  01-prerequisites.md  02-environment-setup.md  03-install-chromadb.md  04-create-collection.md  05-query-data.md  06-troubleshooting.md  07-how-to-add-features.md
docs/features/: ecommerce-seasonal-brain.md  vs.md
src/: config.py
src/insert/: insert_sample_data.py
src/insert/ecommerce-seasonal-brain/: insert_events.py
src/query/: query_pretty.py  query_raw.py
src/query/ecommerce-seasonal-brain/: checklist.py  next_event.py  next_todo.py  next_upcoming_todos.py  overdue_todos.py  todos_this_week.py
src/setup/: chroma_setup.py  verify_environment.py
src/utils/: pretty_print.py
tests/: test_pretty_print.py
